--- a/src/main/webapp/WEB-INF/static/html/BOM.html
+++ b/src/main/webapp/WEB-INF/static/html/BOM.html
@@ -2,11 +2,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>唯群网--BOM成本核算</title>
-    <link rel="stylesheet" href="../css/public.css">
-    <link rel="stylesheet" href="../css/BOM.css">
-    <script src="../js/jquery-3.2.1.js"></script>
-    <script charset="gb2312" type="text/javascript" src="../js/public.js"></script>
-    <script charset="gb2312" type="text/javascript" src="../js/BOM.js"></script>
+    <link rel="stylesheet" href="css/public.css">
+    <link rel="stylesheet" href="css/BOM.css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script charset="gb2312" type="text/javascript" src="js/public.js"></script>
+    <script charset="gb2312" type="text/javascript" src="js/BOM.js"></script>
  </head>
 
 <body>
@@ -14,7 +14,7 @@
 <div id="header">
     <div id="head">
         <div id="logo">
-            <img src="../images/logo.png" alt="">
+            <img src="images/logo.png" alt="">
         </div>
         <div id="uname" onclick="company()">深圳市模板电子科技有限公司</div>
         <a id="admin" onclick="admin()">后台管理</a>
@@ -36,7 +36,7 @@
 
     <div class="box">
         <div id="banner">
-            <img src="../images/banner.jpg" alt=""/>
+            <img src="images/banner.jpg" alt=""/>
         </div>
     </div>
 
@@ -81,161 +81,179 @@
 
     <div class="box">
         <div id="content">
-            <ul>
-                <li>
-                    <span class="noL">产品编号</span>
-                    <span class="pnL">产品名称</span>
-                    <span class="qltyL">产品类别</span>
-                    <span class="pnL">计划用量(套/月)</span>
-                    <span class="dtimeL">回复方式</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model001</span>
-                    <span class="pnL">手机主板</span>
-                    <span class="qltyL">通信产品</span>
-                    <span class="pnL">30000</span>
-                    <span class="dtimeL">人工确认</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model002</span>
-                    <span class="pnL">车载中控</span>
-                    <span class="qltyL">工业控制</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">智能匹配</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model001</span>
-                    <span class="pnL">手机主板</span>
-                    <span class="qltyL">通信产品</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">人工确认</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model002</span>
-                    <span class="pnL">车载中控</span>
-                    <span class="qltyL">工业控制</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">智能匹配</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model001</span>
-                    <span class="pnL">手机主板</span>
-                    <span class="qltyL">通信产品</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">人工确认</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model002</span>
-                    <span class="pnL">车载中控</span>
-                    <span class="qltyL">工业控制</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">智能匹配</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model001</span>
-                    <span class="pnL">手机主板</span>
-                    <span class="qltyL">通信产品</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">人工确认</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model002</span>
-                    <span class="pnL">车载中控</span>
-                    <span class="qltyL">工业控制</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">智能匹配</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model001</span>
-                    <span class="pnL">手机主板</span>
-                    <span class="qltyL">通信产品</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">人工确认</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model002</span>
-                    <span class="pnL">车载中控</span>
-                    <span class="qltyL">工业控制</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">智能匹配</span>
-                    <button class="button">修改</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model001</span>
-                    <span class="pnL">手机主板</span>
-                    <span class="qltyL">通信产品</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">人工确认</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model002</span>
-                    <span class="pnL">车载中控</span>
-                    <span class="qltyL">工业控制</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">智能匹配</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model001</span>
-                    <span class="pnL">手机主板</span>
-                    <span class="qltyL">通信产品</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">人工确认</span>
-                    <button class="button">修改</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model002</span>
-                    <span class="pnL">车载中控</span>
-                    <span class="qltyL">工业控制</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">智能匹配</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model001</span>
-                    <span class="pnL">手机主板</span>
-                    <span class="qltyL">通信产品</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">人工确认</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-                <li>
-                    <span class="noL">Model002</span>
-                    <span class="pnL">车载中控</span>
-                    <span class="qltyL">工业控制</span>
-                    <span class="pnL">3000</span>
-                    <span class="dtimeL">智能匹配</span>
-                    <button class="button">下载</button>
-                    <button class="button">删除</button>
-                </li>
-            </ul>
+            <table cellspacing="15px">
+                <tr><th style="font-size: 20px">我的BOM列表</th></tr>
+                <tr>
+                    <th>产品编号</th>
+                    <th>产品名称</th>
+                    <th>产品类别</th>
+                    <th>计划用量(套/月)</th>
+                    <th>回复方式</th>
+                    <th>更新日期</th>
+                    <th>下载</th>
+                    <th>删除</th>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>人工确认</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>智能匹配</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>人工确认</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>智能匹配</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>人工确认</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>智能匹配</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>人工确认</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>智能匹配</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>人工确认</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>智能匹配</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>人工确认</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>智能匹配</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>人工确认</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>智能匹配</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>人工确认</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+                <tr>
+                    <td>Model001</td>
+                    <td>手机主板</td>
+                    <td>通信产品</td>
+                    <td>30000</td>
+                    <td>智能匹配</td>
+                    <td>2018-12-17</td>
+                    <td>下载</td>
+                    <td>删除</td>
+                </tr>
+            </table>
         </div>
     </div>
 
