--- a/src/main/webapp/WEB-INF/static/html/admin.html
+++ b/src/main/webapp/WEB-INF/static/html/admin.html
@@ -1,13 +1,16 @@
+
 <!DOCTYPE html>
+
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>维群网--管理平台</title>
-    <link rel="stylesheet" href="../css/public.css">
-    <link rel="stylesheet" href="../css/admin.css">
-    <script src="../js/jquery-3.2.1.js"></script>
-    <script charset="gb2312" type="text/javascript" src="../js/public.js"></script>
-    <script charset="gb2312" type="text/javascript" src="../js/admin.js"></script>
+    <link rel="stylesheet" href="css/public.css">
+    <link rel="stylesheet" href="css/admin.css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script charset="gb2312" type="text/javascript" src="js/public.js"></script>
+    <script charset="gb2312" type="text/javascript" src="js/admin.js"></script>
+
 <body>
 <div id="box">
     <div id="box1">
@@ -25,11 +28,12 @@
                 <li>询价管理</li>
                 <li>报价管理</li>
                 <li>库存管理</li>
-                <li>客户价格</li>
+                <li>服务管理</li>
+                <li>平台详情</li>
             </ul>
         </div>
         <div id="detail">
-            这里是详情页
+            <iframe src="Xrfq.html" width="100%" height="1000px" frameborder="0"></iframe>
         </div>
     </div>
 </div>
