--- a/src/main/webapp/WEB-INF/static/html/hotStk.html
+++ b/src/main/webapp/WEB-INF/static/html/hotStk.html
@@ -2,18 +2,18 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>唯群网--库存推广</title>
-    <link rel="stylesheet" href="../css/public.css">
-    <link rel="stylesheet" href="../css/hotStk.css">
-    <script src="../js/jquery-3.2.1.js"></script>
-    <script charset="gb2312" type="text/javascript" src="../js/public.js"></script>
-    <script charset="gb2312" type="text/javascript" src="../js/hotStk.js"></script>
+    <link rel="stylesheet" href="css/public.css">
+    <link rel="stylesheet" href="css/hotStk.css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script charset="gb2312" type="text/javascript" src="js/public.js"></script>
+    <script charset="gb2312" type="text/javascript" src="js/hotStk.js"></script>
  </head>
 
 <body>
     <div id="header">
         <div id="head">
             <div id="logo">
-                <img src="../images/logo.png" alt="">
+                <img src="images/logo.png" alt="">
             </div>
             <div id="uname" onclick="company()">深圳市模板电子科技有限公司</div>
             <a id="admin" onclick="admin()">后台管理</a>
@@ -41,210 +41,152 @@
 
 <div id="h1_box">
     <div id="h1">
-        <div id="uLogo"><img src="../images/elecland.jpg" alt=""/></div>
+        <div id="uLogo"><img src="images/elecland.jpg" alt=""/></div>
         <div id="cName">深圳市模板电子科技有限公司</div>
         <span class="upload">上传清单</span>
         <span class="upload">下载模板</span>
     </div>
-</div>
-    <div class="box">
-        <div  id="h2">
-            <span>库存推广清单</span>
-        </div>
-</div>
 <div class="box">
     <div id="hotStk">
-        <ul>
-            <li>
-                <span class="num">&nbsp;</span>
-                <span class="pnL">型号</span>
-                <span class="qltyL">品质标准</span>
-                <span class="dtcdL" >批次</span>
-                <span class="qtyL">数量</span>
-                <span class="priceL">单价</span>
-                <span class="dtimeL">交期</span>
-            </li>
-            <li>
-                <span class="num">1</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">2</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">3</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">4</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">5</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">6</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">7</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">8</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">9</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">10</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">11</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">12</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">13</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">14</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">15</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">16</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">17</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">18</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">19</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-            <li>
-                <span class="num">20</span>
-                <span class="pnL">STM8S903K3T6CTR</span>
-                <span class="qltyL">原装正品</span>
-                <span class="dtcdL" >2018+</span>
-                <span class="qtyL">56850</span>
-                <span class="priceL">102.56</span>
-                <span class="dtimeL">深圳现货</span>
-            </li>
-        </ul>
+        <table cellspacing="10px">
+            <tr><th colspan="7" style="font-size: 20px">库存推广清单</th></tr>
+            <tr>
+                <th>型号</th>
+                <th>品质标准</th>
+                <th>批次</th>
+                <th>数量</th>
+                <th>单价</th>
+                <th>交期</th>
+                <th>更新日期</th>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+            <tr>
+                <td>STM8S903K3T6CTR</td>
+                <td>原装正品</td>
+                <td>2018+</td>
+                <td>56850</td>
+                <td>102.56</td>
+                <td>深圳现货</td>
+                <td>2018-12-27</td>
+            </tr>
+
+        </table>
     </div>
 </div>
 
